--- a/package.json
+++ b/package.json
@@ -3,6 +3,26 @@
     "console.table": "^0.10.0",
     "express": "^4.17.2",
     "inquirer": "^8.2.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3"
-  }
+  },
+  "scripts": {
+    "test": "jest",
+    "start": "node server.js"
+  },
+  "name": "inquirer",
+  "description": "# User Story     As a business owner, we are able to view and manage the departments, roles, and employees in my company so that we can organize and plan the business.",
+  "version": "1.0.0",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/michaelcmaresco/Employee-Tracker-Content-Management-System.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/michaelcmaresco/Employee-Tracker-Content-Management-System/issues"
+  },
+  "homepage": "https://github.com/michaelcmaresco/Employee-Tracker-Content-Management-System#readme"
 }
